hphp/hack/test/typecheck/reactive/rx_append1.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__Rx>>
function a(Vector<int> $a)[rx]: void {
  $a[] = 1;
}
